--- a/admin/package.json
+++ b/admin/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "_moduleAliases": {
-    "@": "src"
+    "@": "dist/src"
   },
   "scripts": {
-    "test": "jest",
+   "test": "jest",
     "dev": "nodemon --inspect",
-    "start": "node server.ts"
-  
+    "start": "npm run prisma:deploy && node -r module-alias/register dist/server.js",
+    "build": "tsc",
+    "prisma": "npm run prisma:generate && npm run prisma:deploy",
+    "prisma:generate": "npx prisma generate",
+    "prisma:deploy": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -27,12 +30,10 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.17",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.5.2"
   },
   "dependencies": {
@@ -44,15 +45,18 @@
     "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "os": "^0.1.2",
     "process": "^0.11.10",
