--- a/film/package.json
+++ b/film/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "_moduleAliases": {
-    "@": "src"
+    "@": "dist/src"
   },
   "scripts": {
     "test": "jest",
     "dev": "nodemon --inspect",
-    "start": "node server.ts"
+    "start": "npm run prisma && node -r module-alias/register dist/server.js",
+    "build": "tsc",
+    "prisma": "npm run prisma:generate && npm run prisma:deploy",
+    "prisma:generate": "npx prisma generate",
+    "prisma:deploy": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -25,12 +29,10 @@
     "@types/lodash": "^4.17.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.9",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "prisma": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.5.2"
   },
   "dependencies": {
@@ -44,16 +46,19 @@
     "cloudinary": "^2.2.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "events": "^3.3.0",
     "express": "^4.19.2",
+    "helmet": "^8.1.0",
     "isomorphic-dompurify": "^2.13.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
     "os": "^0.1.2",
     "process": "^0.11.10",
     "redis": "^4.6.14",
