--- a/user/package.json
+++ b/user/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "_moduleAliases": {
-    "@": "src"
+    "@": "dist/src"
   },
   "scripts": {
     "test": "jest",
-    "migrate:init": "npx prisma migrate dev",
-    "migrate:deploy": "npx prisma migrate deploy",
-    "dev": "nodemon --inspect --watch prisma/schema.prisma --exec \"npx prisma migrate dev && npx prisma generate && ts-node server.ts\"",
-    "start": "node server.ts"
+    "dev": "nodemon --inspect",
+    "start": "npm run prisma:deploy && node -r module-alias/register dist/server.js",
+    "prisma": "npm run prisma:generate && npm run prisma:deploy",
+    "prisma:generate": "npx prisma generate",
+    "prisma:deploy": "npx prisma migrate deploy",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -29,12 +31,10 @@
     "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.15",
     "@types/user-agents": "^1.0.4",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "prisma": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.5.2"
   },
   "dependencies": {
@@ -46,14 +46,17 @@
     "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "os": "^0.1.2",
     "process": "^0.11.10",
