--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -49,6 +49,8 @@ RUN npm ci --omit=dev
 # RUN npm install && npm cache clean --force
 
 EXPOSE 5002
-
+#hell
 # CMD ["npm","run","dev" ]
 CMD ["npm","start" ]
+
+
