--- a/filmFrontendAdmin/Dockerfile
+++ b/filmFrontendAdmin/Dockerfile
@@ -1,14 +1,14 @@
 #Build stage
 FROM node:20-alpine AS base
 
-WORKDIR /app/filmFrontendAdmin
+WORKDIR /app/filmFrontendUser
 
 
 FROM base AS dev
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 3001
+EXPOSE 3000
 CMD ["npm","run","dev"]
 
 
@@ -20,12 +20,12 @@ RUN npm run build
 
 #production stage
 FROM  base AS prod
-COPY --from=builder /app/filmFrontendAdmin/next.config.mjs ./next.config.mjs
-COPY --from=builder /app/filmFrontendAdmin/public ./public
-COPY --from=builder /app/filmFrontendAdmin/.next ./.next
-COPY --from=builder /app/filmFrontendAdmin/package.json ./package.json
-COPY --from=builder /app/filmFrontendAdmin/package-lock.json ./package-lock.json
+COPY --from=builder /app/filmFrontendUser/next.config.mjs ./next.config.mjs
+COPY --from=builder /app/filmFrontendUser/public ./public
+COPY --from=builder /app/filmFrontendUser/.next ./.next
+COPY --from=builder /app/filmFrontendUser/package.json ./package.json
+COPY --from=builder /app/filmFrontendUser/package-lock.json ./package-lock.json
 
 RUN npm ci --omit=dev
-EXPOSE 3001
+EXPOSE 3000
 CMD [ "npm","start" ]
