--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,23 +60,23 @@ services:
       - elasticsearch
     networks:
       - backend-network
-  # mysql-film:
-  #   image: mysql:8
-  #   restart: always
-  #   environment:
-  #     MYSQL_USER: film_user
-  #     MYSQL_PASSWORD: trongdatfilm
-  #     MYSQL_ROOT_PASSWORD: rootfilm
-  #     MYSQL_DATABASE: filmdb
-  #   volumes:
-  #     - mysql-film:/var/lib/mysql
-  #   ports:
-  #     - "3308:3306"
-  #   networks:
-  #     - backend-network
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
+  mysql-film:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_USER: film_user
+      MYSQL_PASSWORD: trongdatfilm
+      MYSQL_ROOT_PASSWORD: rootfilm
+      MYSQL_DATABASE: filmdb
+    volumes:
+      - mysql-film:/var/lib/mysql
+    ports:
+      - "3308:3306"
+    networks:
+      - backend-network
+    deploy:
+      mode: replicated
+      replicas: 1
   
   film:
     image: tdat/film:dev
@@ -88,9 +88,10 @@ services:
       - REDIS_PORT=6379
       - ELASTICSEARCH_URL=http://elasticsearch:9200
     depends_on:
-      # - mysql-film
+      - mysql-film
       - redis-film
       - elasticsearch
+      - rabbitmq
     env_file:
       - ./film/.env
     expose:
@@ -100,23 +101,23 @@ services:
     networks:
       - backend-network
 
-  # mysql-admin:
-  #   image: mysql:8
-  #   restart: always
-  #   environment:
-  #     MYSQL_USER: admin_user
-  #     MYSQL_PASSWORD: trongdatadmin
-  #     MYSQL_ROOT_PASSWORD: rootadmin
-  #     MYSQL_DATABASE: admindb
-  #   volumes:
-  #     - mysql-admin:/var/lib/mysql
-  #   ports:
-  #     - "3309:3306"
-  #   networks:
-  #     - backend-network
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
+  mysql-admin:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_USER: admin_user
+      MYSQL_PASSWORD: trongdatadmin
+      MYSQL_ROOT_PASSWORD: rootadmin
+      MYSQL_DATABASE: admindb
+    volumes:
+      - mysql-admin:/var/lib/mysql
+    ports:
+      - "3309:3306"
+    networks:
+      - backend-network
+    deploy:
+      mode: replicated
+      replicas: 1
 
   admin:
     restart: always
@@ -127,7 +128,7 @@ services:
       - REDIS_HOST=redis-film
       - REDIS_PORT=6379
     depends_on:
-      # - mysql-admin
+      - mysql-admin
       - rabbitmq
       - redis-film
       # - "redis"
@@ -140,23 +141,23 @@ services:
     networks:
       - backend-network
 
-  # mysql-user:
-  #   image: mysql:8
-  #   restart: always
-  #   environment:
-  #     MYSQL_USER: user_user
-  #     MYSQL_PASSWORD: trongdatuser
-  #     MYSQL_ROOT_PASSWORD: rootuser
-  #     MYSQL_DATABASE: userdb
-  #   volumes:
-  #     - mysql-user:/var/lib/mysql
-  #   ports:
-  #     - "3310:3306"
-  #   networks:
-  #     - backend-network
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
+  mysql-user:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_USER: user_user
+      MYSQL_PASSWORD: trongdatuser
+      MYSQL_ROOT_PASSWORD: rootuser
+      MYSQL_DATABASE: userdb
+    volumes:
+      - mysql-user:/var/lib/mysql
+    ports:
+      - "3310:3306"
+    networks:
+      - backend-network
+    deploy:
+      mode: replicated
+      replicas: 1
 
   user:
     image: tdat/user:dev
@@ -169,7 +170,7 @@ services:
       - REDIS_PORT=6379
       - NODE_ENV=development
     depends_on:
-      # - mysql-user
+      - mysql-user
       - redis-film
       - rabbitmq
     volumes:
@@ -181,23 +182,23 @@ services:
     networks:
       - backend-network
 
-  # mysql-rbac:
-  #   image: mysql:8
-  #   restart: always
-  #   environment:
-  #     MYSQL_USER: rbac_user
-  #     MYSQL_PASSWORD: trongdatrbac
-  #     MYSQL_ROOT_PASSWORD: rootrbac
-  #     MYSQL_DATABASE: rbacdb
-  #   volumes:
-  #     - mysql-rbac:/var/lib/mysql
-  #   ports:
-  #     - "3311:3306"
-  #   networks:
-  #     - backend-network
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
+  mysql-rbac:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_USER: rbac_user
+      MYSQL_PASSWORD: trongdatrbac
+      MYSQL_ROOT_PASSWORD: rootrbac
+      MYSQL_DATABASE: rbacdb
+    volumes:
+      - mysql-rbac:/var/lib/mysql
+    ports:
+      - "3311:3306"
+    networks:
+      - backend-network
+    deploy:
+      mode: replicated
+      replicas: 1
 
   rbac:
     restart: always
@@ -208,7 +209,7 @@ services:
       - REDIS_HOST=redis-film
       - REDIS_PORT=6379
     depends_on:
-      # - mysql-rbac
+      - mysql-rbac
       - redis-film
     volumes:
       - .:/app
@@ -278,6 +279,7 @@ services:
       - nextjs
       - nextjs-admin
     ports:
+      - "80:80"
       - "8080:8080"
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
@@ -316,14 +318,14 @@ networks:
 volumes:
   esdata:
     driver: local
-  # mysql-film:
-  #   external: true
-  # mysql-admin:
-  #   external: true
-  # mysql-user:
-  #   external: true
-  # mysql-rbac:
-  #   external: true
+  mysql-film:
+    external: true
+  mysql-admin:
+    external: true
+  mysql-user:
+    external: true
+  mysql-rbac:
+    external: true
   redis:
     driver: local
 
