--- a/filmFrontendAdmin/package.json
+++ b/filmFrontendAdmin/package.json
@@ -3,34 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.7.10",
     "@iconicicons/react": "^1.5.1",
-    "@nextui-org/alert": "^2.2.7",
-    "@nextui-org/react": "^2.6.8",
-    "@nextui-org/system": "^2.4.4",
-    "@nextui-org/theme": "^2.4.3",
-    "@reduxjs/toolkit": "^2.2.6",
+    "@nextui-org/react": "^2.4.6",
+    "@nextui-org/tabs": "^2.0.35",
+    "@reduxjs/toolkit": "^2.2.7",
     "@smastrom/react-rating": "^1.5.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "formik": "^2.4.6",
-    "framer-motion": "^11.14.4",
-    "fs": "^0.0.1-security",
-    "hls.js": "^1.5.13",
+    "framer-motion": "^12.18.1",
+    "hls.js": "^1.5.14",
     "next": "^15.1.2",
-    "nextui-cli": "^0.5.0",
-    "path": "^0.12.7",
+    "next-recaptcha-v3": "^1.5.0",
     "plyr": "^3.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,19 +36,18 @@
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
-    "url": "^0.11.3",
+    "url": "^0.11.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
