--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -122,7 +122,7 @@
                 add_header X-Frame-Options "SAMEORIGIN";
                 proxy_hide_header X-Powered-By;
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-                add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
+                add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://phimimg.com https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
              
             }
