--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,26 +1,40 @@
-name: Deploy to Amazon ECS
+name: Build and push images
 
 on:
   push:
     branches: [ "master" ]
 
 jobs:
-  deploy:
-    name: Deploy
+  docker-compose:
+    name: Build and Push
     runs-on: ubuntu-latest
     environment: production
 
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-
-    - name: Configure AWS credentials
-      uses: appleboy/ssh-action@master
+      
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
       with:
-        host: ${{secrets.HOST}}
-        username: ${{secrets.USERNAME}}
-        key: ${{secrets.PASSWORD}}
-        port: 22
-        script: |
-           cd filmBackendMysql       
-           echo "Deploy done"
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build images
+      run: docker compose -f docker-compose.yml build
+
+    - name: Push images
+      run: docker compose -f docker-compose.yml push
+    # - name: Configure AWS credentials
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{secrets.HOST}}
+    #     username: ${{secrets.USERNAME}}
+    #     key: ${{secrets.PASSWORD}}
+    #     port: 22
+    #     script: |
+    #        cd filmBackendMysql       
+    #        echo "Deploy done"
